Integrated gateway storage api

--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "storage"
   ],
   "dependencies": {
+    "form-data": "^2.3.3",
     "got": "^9.6.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "dotenv-expand": "^4.2.0",
     "express": "^4.16.4",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.18.9"
+    "express-form-data": "^2.0.8",
+    "hbs": "^4.0.1",
+    "nodemon": "^1.18.9",
+    "path": "^0.12.7"
   }
 }
