--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "decentralized",
     "storage"
   ],
+  "files": [
+    "index.js",
+    "src/"
+  ],
   "dependencies": {
     "form-data": "^2.3.3",
     "got": "^9.6.0",
