--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "js-sdk-lightstreams",
+  "name": "lightstreams-js-sdk",
   "version": "0.1.0",
-  "description": "Set of client-side functionality for interacting to lightstreams gateway",
-  "author": "Gabriel Garrido",
-  "license": "MIT",
+  "description": "Lightstreams Gateway API Javascript Client SDK",
+  "authors": "Gabriel Garrido",
+  "contributors" ["Andrew Zappella"],
+  "license": "GPLv3",
   "homepage": "https://github.com/lightstreams-network/js-sdk-lightstreams#readme",
   "bugs": {
     "url": "https://github.com/lightstreams-network/js-sdk-lightstreams/issues"
@@ -17,6 +18,8 @@
     "lightstreams",
     "blockchain",
     "ethereum",
+    "javascript",
+    "js",
     "sdk",
     "decentralized",
     "storage"
