Fixed missing colon

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Lightstreams Gateway API Javascript Client SDK",
   "authors": "Gabriel Garrido",
-  "contributors" ["Andrew Zappella"],
+  "contributors": ["Andrew Zappella"],
   "license": "GPLv3",
   "homepage": "https://github.com/lightstreams-network/js-sdk-lightstreams#readme",
   "bugs": {
