--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lightstreams-js-sdk",
   "version": "0.1.0",
-  "description": "Lightstreams Gateway API Javascript Client SDK",
+  "description": "Javascript SDK for the Lightstreams Gateway API",
   "authors": "Gabriel Garrido",
   "contributors": ["Andrew Zappella"],
   "license": "GPLv3",
