--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   },
   "dependencies": {
     "form-data": "^2.3.3",
-    "got": "^9.6.0",
-    "request": "^2.88.0"
+    "got": "^9.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
