Fixed gateway.add() api to be browser and nodejs compatible. Including simple React example of file uploading

--- a/example/gateway-browser/.gitignore
+++ b/example/gateway-browser/.gitignore
@@ -1,4 +1,14 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+coverage
+
+# Dependency directories
 node_modules
-dist/*
-.cache
-!.gitkeep
+
+# Optional npm cache directory
+.npm
+
+# Prod Bundle
+build
