Integrate grantPublic and revokePublic gateway endpoints | Fixed error stream response

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lightstreams-js-sdk",
   "version": "0.2.8",
   "description": "Javascript SDK for the Lightstreams Gateway API",
-  "authors": "Gabriel Garrido",
+  "author": "Gabriel Garrido",
   "contributors": [
     "Andrew Zappella"
   ],
