Fixed vulnabilities, second round

--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "build-single": "babel src --out-file ./lib/index.js"
   },
   "dependencies": {
-    "form-data": "^2.3.3",
-    "node-fetch": "^2.5.0"
+    "eth-lightwallet": "^4.0.0",
+    "form-data": "^2.5.0",
+    "node-fetch": "^2.6.0",
+    "web3": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4"
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5"
   }
 }
