--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "build-single": "babel src --out-file ./lib/index.js"
   },
   "dependencies": {
+    "entropy-string": "^4.2.0",
     "eth-lightwallet": "^4.0.0",
     "form-data": "^2.5.0",
+    "hooked-web3-provider": "^1.0.0",
     "node-fetch": "^2.6.0",
     "web3": "^1.2.0"
   },
