--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
   "dependencies": {
     "entropy-string": "^4.2.0",
     "eth-lightwallet": "^4.0.0",
+    "ethereumjs-util": "^6.1.0",
     "form-data": "^2.5.0",
     "hooked-web3-provider": "^1.0.0",
+    "net": "^1.0.2",
     "node-fetch": "^2.6.0",
     "web3": "^1.2.0"
   },
