Signup/signin completed

--- a/example/gateway-browser/package.json
+++ b/example/gateway-browser/package.json
@@ -14,7 +14,7 @@
   "license": "GPLv3",
   "dependencies": {
     "dotenv-webpack": "^1.7.0",
-    "lightstreams-js-sdk": "git+ssh://git@github.com/lightstreams-network/lightstreams-js-sdk.git#master",
+    "lightstreams-js-sdk": "git+ssh://git@github.com/lightstreams-network/lightstreams-js-sdk.git#next-master",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
