Update build folder with latest changes

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "babel src -d build/src",
     "build-single": "babel src --out-file ./build/src/index.js",
-    "compile": "truffle compile --all --reset"
+    "compile": "truffle compile --all"
   },
   "repository": {
     "type": "git",
