First little steps for the integration of ENS

--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "build/src"
   ],
   "dependencies": {
+    "@ensdomains/ens": "0.3.11",
+    "@ensdomains/resolver": "0.1.9",
     "entropy-string": "^4.2.0",
     "eth-lightwallet": "^4.0.0",
+    "ethereum-ens": "^0.7.7",
     "ethereumjs-util": "^6.1.0",
     "form-data": "^2.5.0",
     "net": "^1.0.2",
@@ -52,6 +55,6 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
-    "truffle": "^5.0.5"
+    "truffle": "5.0.5"
   }
 }
