--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
     "@ensdomains/ens": "0.3.11",
     "@ensdomains/resolver": "0.1.9",
     "entropy-string": "^4.2.0",
+    "eth-ens-namehash": "^2.0.8",
     "eth-lightwallet": "^4.0.0",
     "ethereum-ens": "^0.7.7",
     "ethereumjs-util": "^6.1.0",
     "form-data": "^2.5.0",
     "net": "^1.0.2",
     "node-fetch": "^2.6.0",
-    "web3": "^1.2.0"
+    "web3": "^1.2.0",
+    "web3-provider-engine": "^15.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
