Rough integration of ethers

--- a/example/gateway-browser/package.json
+++ b/example/gateway-browser/package.json
@@ -13,7 +13,6 @@
   "author": "Gabriel Garrido",
   "license": "GPLv3",
   "dependencies": {
-    "dotenv-webpack": "^1.7.0",
     "lightstreams-js-sdk": "git+ssh://git@github.com/lightstreams-network/lightstreams-js-sdk.git",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -49,6 +48,7 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "dotenv-webpack": "^1.7.0"
   }
 }
