--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eth-lightwallet": "^4.0.0",
     "ethereum-ens": "^0.7.7",
     "ethereumjs-util": "^6.1.0",
+    "ethers": "^4.0.36",
     "form-data": "^2.5.0",
     "net": "^1.0.2",
     "node-fetch": "^2.6.0",
