Including /contracts to the required npm folders

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   ],
   "files": [
     "src/",
-    "build/src"
+    "build/src",
+    "contracts/"
   ],
   "dependencies": {
     "@ensdomains/ens": "0.3.11",
