--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "lightstreams-js-sdk",
-  "version": "0.2.9",
-  "description": "Javascript SDK for the Lightstreams Gateway API",
+  "version": "0.3.0",
+  "description": "Lightstreams JS SDK for building mainstream DApps with support for Programmable Decentralized Private Storage.",
   "author": "Gabriel Garrido",
   "contributors": [
-    "Andrew Zappella"
+    "Andrew Zappella",
+    "Lukas Lukac"
   ],
   "license": "GPLv3",
   "homepage": "https://github.com/lightstreams-network/js-sdk-lightstreams#readme",
@@ -16,7 +17,8 @@
     "build": "babel src -d build/src",
     "build-single": "babel src --out-file ./build/src/index.js",
     "compile": "rm -rf ./build/contracts/*; truffle compile --all --reset",
-    "test": "truffle test --network standalone"
+    "test-standalone": "cp .env.standalone .env && truffle test --network=standalone",
+    "test-sirius": "cp .env.sirius .env && truffle test --network=sirius"
   },
   "repository": {
     "type": "git",
@@ -34,8 +36,7 @@
   ],
   "files": [
     "src/",
-    "build/src",
-    "contracts/"
+    "build/src"
   ],
   "dependencies": {
     "@ensdomains/ens": "0.3.11",
@@ -49,14 +50,17 @@
     "net": "^1.0.2",
     "node-fetch": "^2.6.0",
     "web3": "^1.2.0",
-    "web3-provider-engine": "^15.0.3"
+    "web3-provider-engine": "^15.0.3",
+    "@openzeppelin/gsn-helpers": "^0.1.9",
+    "@openzeppelin/network": "^0.2.7",
+    "react": "^16.9.0"
   },
   "devDependencies": {
+    "@ensdomains/buffer": "0.0.10",
+    "@ensdomains/dnssec-oracle": "^0.1.2",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@ensdomains/buffer": "0.0.10",
-    "@ensdomains/dnssec-oracle": "^0.1.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
