#7 Sets up a post-install patch script to hack OpenZeppelin GSN modules.

--- a/.env.sirius
+++ b/.env.sirius
@@ -1,3 +1,3 @@
 ACCOUNT="0xd119b8b038d3a67d34ca1d46e1898881626a082b"
-PASSPHRASE="TestOne2Sweet"
-RELAYHUB="0x096dCdB6A7e765c976BDa612c1395865FbFbBC0f"
+PASSPHRASE=""
+RELAYHUB="0x2B4d0A80cc643564c4521a33Ad0Ac15DfE6b8d77"
