--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "main": "src/index.js",
   "scripts": {
+    "postinstall": "patch-package",
+
     "build": "babel src -d build/src",
     "build-single": "babel src --out-file ./build/src/index.js",
     "compile": "rm -rf ./build/contracts/*; truffle compile --all --reset",
     "test-standalone": "cp .env.standalone .env && truffle test --network=standalone",
-    "test-sirius": "cp .env.sirius .env && truffle test --network=sirius"
+    "test-sirius": "cp .env.sirius .env && truffle test --network=sirius",
+    "test-sirius-gsn": "cp .env.sirius .env && truffle test ./test/02_gsn_acl_factory.js --network=sirius"
   },
   "repository": {
     "type": "git",
@@ -56,14 +59,15 @@
     "react": "^16.9.0"
   },
   "devDependencies": {
-    "@ensdomains/buffer": "0.0.10",
-    "@ensdomains/dnssec-oracle": "^0.1.2",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@ensdomains/buffer": "0.0.10",
+    "@ensdomains/dnssec-oracle": "^0.1.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
+    "patch-package": "^6.2.0",
     "truffle": "5.0.35"
   }
 }
