--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "babel src -d build/src",
     "build-single": "babel src --out-file ./build/src/index.js",
     "compile": "rm -rf ./build/contracts/*; truffle compile --all --reset",
-    "test-standalone": "cp .env.standalone .env && truffle test --network standalone"
+    "test": "truffle test --network standalone"
   },
   "repository": {
     "type": "git",
