--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 ACCOUNT="0xc916cfe5c83dd4fc3c3b0bf2ec2d4e401782875e"
 PASSPHRASE=""
-RELAYHUB=""
+RELAYHUB="0x2B4d0A80cc643564c4521a33Ad0Ac15DfE6b8d77"
