--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   "main": "src/index.js",
   "scripts": {
     "postinstall": "patch-package",
-
     "build": "babel src -d build/src",
     "build-single": "babel src --out-file ./build/src/index.js",
     "compile": "rm -rf ./build/contracts/*; truffle compile --all --reset",
-    "test-standalone": "cp .env.standalone .env && truffle test --network=standalone",
-    "test-sirius": "cp .env.sirius .env && truffle test --network=sirius",
-    "test-sirius-gsn": "cp .env.sirius .env && truffle test ./test/02_gsn_acl_factory.js --network=sirius"
+    "test-standalone": "truffle test --network=standalone",
+    "test-sirius": "truffle test --network=sirius",
+    "test-sirius-gsn": "truffle test ./test/02_gsn_acl_factory.js --network=sirius"
   },
   "repository": {
     "type": "git",
@@ -56,6 +55,8 @@
     "web3-provider-engine": "^15.0.3",
     "@openzeppelin/gsn-helpers": "^0.1.9",
     "@openzeppelin/network": "^0.2.7",
+    "@openzeppelin/contracts-ethereum-package": "^2.2.3",
+    "@openzeppelin/upgrades": "^2.5.1",
     "react": "^16.9.0"
   },
   "devDependencies": {
