--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "@openzeppelin/gsn-helpers": "^0.1.9",
     "@openzeppelin/network": "^0.2.7",
     "@openzeppelin/contracts-ethereum-package": "^2.2.3",
-    "@openzeppelin/upgrades": "^2.5.1",
-    "react": "^16.9.0"
+    "@openzeppelin/upgrades": "^2.5.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
