#7 Install fixed version of packages.

--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "node-fetch": "^2.6.0",
     "web3": "^1.2.0",
     "web3-provider-engine": "^15.0.3",
-    "@openzeppelin/gsn-helpers": "^0.1.9",
-    "@openzeppelin/network": "^0.2.7",
-    "@openzeppelin/contracts-ethereum-package": "^2.2.3",
-    "@openzeppelin/upgrades": "^2.5.1"
+    "@openzeppelin/gsn-helpers": "0.1.9",
+    "@openzeppelin/network": "0.2.9",
+    "@openzeppelin/contracts-ethereum-package": "2.2.3",
+    "@openzeppelin/upgrades": "2.5.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
