--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "lightstreams-js-sdk",
-  "version": "0.2.9",
-  "description": "Javascript SDK for the Lightstreams Gateway API",
+  "version": "0.3.0",
+  "description": "Lightstreams JS SDK for building mainstream DApps with support for Programmable Decentralized Private Storage.",
   "author": "Gabriel Garrido",
   "contributors": [
-    "Andrew Zappella"
+    "Andrew Zappella",
+    "Lukas Lukac"
   ],
   "license": "GPLv3",
   "homepage": "https://github.com/lightstreams-network/js-sdk-lightstreams#readme",
@@ -13,10 +14,13 @@
   },
   "main": "src/index.js",
   "scripts": {
+    "postinstall": "patch-package",
     "build": "babel src -d build/src",
     "build-single": "babel src --out-file ./build/src/index.js",
     "compile": "rm -rf ./build/contracts/*; truffle compile --all --reset",
-    "test": "truffle test --network standalone"
+    "test-standalone": "truffle test --network=standalone",
+    "test-sirius": "truffle test --network=sirius",
+    "test-sirius-gsn": "truffle test ./test/02_gsn_acl_factory.js --network=sirius"
   },
   "repository": {
     "type": "git",
@@ -34,8 +38,7 @@
   ],
   "files": [
     "src/",
-    "build/src",
-    "contracts/"
+    "build/src"
   ],
   "dependencies": {
     "@ensdomains/ens": "0.3.11",
@@ -49,7 +52,11 @@
     "net": "^1.0.2",
     "node-fetch": "^2.6.0",
     "web3": "^1.2.0",
-    "web3-provider-engine": "^15.0.3"
+    "web3-provider-engine": "^15.0.3",
+    "@openzeppelin/gsn-helpers": "0.1.9",
+    "@openzeppelin/network": "0.2.9",
+    "@openzeppelin/contracts-ethereum-package": "2.2.3",
+    "@openzeppelin/upgrades": "2.5.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -60,6 +67,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
+    "patch-package": "^6.2.0",
     "truffle": "5.0.35"
   }
 }
