Adds patch-package to npm dependencies.

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "@openzeppelin/gsn-helpers": "0.1.9",
     "@openzeppelin/network": "0.2.9",
     "@openzeppelin/contracts-ethereum-package": "2.2.3",
-    "@openzeppelin/upgrades": "2.5.3"
+    "@openzeppelin/upgrades": "2.5.3",
+    "patch-package": "^6.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -67,7 +68,6 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
-    "patch-package": "^6.2.0",
     "truffle": "5.0.35"
   }
 }
