--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 ACCOUNT="0xc916cfe5c83dd4fc3c3b0bf2ec2d4e401782875e"
 PASSPHRASE=""
-RELAYHUB="0xECf278654f73000F9cB3b05858158AC49c29ed68"
+RELAY_HUB="0xECf278654f73000F9cB3b05858158AC49c29ed68"
