--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "web3": "^1.2.0",
     "web3-provider-engine": "^15.0.3",
     "@openzeppelin/gsn-helpers": "0.1.9",
+    "@openzeppelin/gsn-provider": "0.1.6",
     "@openzeppelin/network": "0.2.9",
     "@openzeppelin/contracts-ethereum-package": "2.2.3",
     "@openzeppelin/upgrades": "2.5.3",
