Using env variables to define gsn funding values

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
 ACCOUNT="0xc916cfe5c83dd4fc3c3b0bf2ec2d4e401782875e"
 PASSPHRASE=""
 RELAY_HUB="0xECf278654f73000F9cB3b05858158AC49c29ed68"
+
+GSN_PROFILE_FACTORY_FUNDING = '300'
+GSN_PROFILE_FUNDING = '20'
