Using env.RELAY_URL instead of hardcoded relay url

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 ACCOUNT="0xc916cfe5c83dd4fc3c3b0bf2ec2d4e401782875e"
 PASSPHRASE=""
 RELAY_HUB=""
+RELAY_URL="http://localhost:8090"
 
 GSN_PROFILE_FACTORY_FUNDING = '10000'
 GSN_PROFILE_FUNDING = '50'
