--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
   "dependencies": {
     "@ensdomains/ens": "0.3.11",
     "@ensdomains/resolver": "0.1.9",
+    "@openzeppelin/contracts-ethereum-package": "2.2.3",
+    "@openzeppelin/gsn-helpers": "0.1.9",
+    "@openzeppelin/gsn-provider": "^0.1.6",
+    "@openzeppelin/network": "0.2.9",
+    "@openzeppelin/upgrades": "2.5.3",
     "entropy-string": "^4.2.0",
     "eth-ens-namehash": "^2.0.8",
     "ethereum-ens": "^0.7.7",
@@ -50,14 +55,9 @@
     "form-data": "^2.5.0",
     "net": "^1.0.2",
     "node-fetch": "^2.6.0",
+    "patch-package": "^6.2.0",
     "web3": "^1.2.0",
-    "web3-provider-engine": "^15.0.3",
-    "@openzeppelin/gsn-helpers": "0.1.9",
-    "@openzeppelin/gsn-provider": "0.1.6",
-    "@openzeppelin/network": "0.2.9",
-    "@openzeppelin/contracts-ethereum-package": "2.2.3",
-    "@openzeppelin/upgrades": "2.5.3",
-    "patch-package": "^6.2.0"
+    "web3-provider-engine": "^15.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
