Adds first ArtistToken iteration powered by a bonding curve design.
Includes majority of tests. Contract + tests still WIP.

--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
     "@ensdomains/resolver": "0.1.9",
     "@openzeppelin/contracts-ethereum-package": "2.2.3",
     "@openzeppelin/gsn-helpers": "0.1.9",
-    "@openzeppelin/gsn-provider": "^0.1.6",
+    "@openzeppelin/gsn-provider": "0.1.6",
     "@openzeppelin/network": "0.2.9",
     "@openzeppelin/upgrades": "2.5.3",
+    "openzeppelin-test-helpers": "0.3.2",
     "entropy-string": "^4.2.0",
     "eth-ens-namehash": "^2.0.8",
     "ethereum-ens": "^0.7.7",
@@ -57,7 +58,7 @@
     "node-fetch": "^2.6.0",
     "patch-package": "^6.2.0",
     "web3": "^1.2.0",
-    "web3-provider-engine": "^15.0.3"
+    "web3-provider-engine": "15.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
