--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "build": "babel src -d build/src",
     "build-single": "babel src --out-file ./build/src/index.js",
     "compile": "rm -rf ./build/contracts/*; truffle compile --all --reset",
-    "test": "truffle test --reset --network",
-    "deploy": "truffle deploy --reset --network"
+    "test": "FORCE_MIGRATION='false' truffle test --network",
+    "deploy": "FORCE_MIGRATION='true' truffle migrate --reset --network"
   },
   "repository": {
     "type": "git",
@@ -47,7 +47,6 @@
     "@openzeppelin/gsn-provider": "0.1.6",
     "@openzeppelin/network": "0.2.9",
     "@openzeppelin/upgrades": "2.5.3",
-    "openzeppelin-test-helpers": "0.3.2",
     "entropy-string": "^4.2.0",
     "eth-ens-namehash": "^2.0.8",
     "ethereum-ens": "^0.7.7",
@@ -66,6 +65,7 @@
     "@babel/preset-env": "^7.5.5",
     "@ensdomains/buffer": "0.0.10",
     "@ensdomains/dnssec-oracle": "^0.1.2",
+    "openzeppelin-test-helpers": "0.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
