Optimize verbosing of force migration logic

--- a/.env.sample
+++ b/.env.sample
@@ -6,9 +6,7 @@ RELAY_URL="http://localhost:8090"
 GSN_PROFILE_FACTORY_FUNDING = '500'
 GSN_PROFILE_FUNDING = '10'
 
-FORCE_MIGRATION = 'true'
+FORCE_MIGRATION = 'false'
 
 TLD="lsn"
 DOMAIN="sdk"
-
-MIGRATE_ENS="true"
