--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,7 @@ RELAY_URL="http://localhost:8090"
 GSN_PROFILE_FACTORY_FUNDING = '500'
 GSN_PROFILE_FUNDING = '10'
 
-FORCE_MIGRATION = 'false'
+FORCE_MIGRATION = 'true'
 
 TLD="lsn"
 DOMAIN="sdk"
