Rename env variables to improve understanding

--- a/.env.sample
+++ b/.env.sample
@@ -3,8 +3,9 @@ PASSPHRASE=""
 RELAY_HUB=""
 RELAY_URL="http://localhost:8090"
 
-GSN_PROFILE_FACTORY_FUNDING = '500'
+GSN_PROFILE_FACTORY_FUNDING = '50'
 GSN_PROFILE_FUNDING = '10'
+PROFILE_FACTORY_FAUCET = '100'
 
 FORCE_MIGRATION = 'true'
 
