--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@openzeppelin/gsn-provider": "0.1.6",
     "@openzeppelin/network": "0.2.9",
     "@openzeppelin/upgrades": "2.5.3",
+    "cids": "^0.7.1",
     "entropy-string": "^4.2.0",
     "eth-ens-namehash": "^2.0.8",
     "ethereum-ens": "^0.7.7",
@@ -65,10 +66,10 @@
     "@babel/preset-env": "^7.5.5",
     "@ensdomains/buffer": "0.0.10",
     "@ensdomains/dnssec-oracle": "^0.1.2",
-    "openzeppelin-test-helpers": "0.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
+    "openzeppelin-test-helpers": "0.3.2",
     "truffle": "5.0.35"
   }
 }
