Including contracts/build into package sources

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightstreams-js-sdk",
-  "version": "0.14.0",
+  "version": "0.14.1",
   "description": "Lightstreams JS SDK for building mainstream DApps with support for Programmable Decentralized Private Storage.",
   "author": "Gabriel Garrido",
   "contributors": [
@@ -37,7 +37,8 @@
   "files": [
     "src/",
     "contracts/",
-    "build/src"
+    "build/src",
+    "build/contracts"
   ],
   "dependencies": {
     "@ensdomains/ens": "0.3.11",
