Fix version of web3js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightstreams-js-sdk",
-  "version": "0.14.2",
+  "version": "0.14.3",
   "description": "Lightstreams JS SDK for building mainstream DApps with support for Programmable Decentralized Private Storage.",
   "author": "Gabriel Garrido",
   "contributors": [
@@ -58,7 +58,7 @@
     "net": "^1.0.2",
     "node-fetch": "^2.6.0",
     "patch-package": "^6.2.0",
-    "web3": "^1.2.2",
+    "web3": "1.2.1",
     "web3-provider-engine": "15.0.3"
   },
   "devDependencies": {
