Replace token symbol to bytes4 | Fix truffle test

--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ GSN_PROFILE_FACTORY_FUNDING = '50'
 GSN_PROFILE_FUNDING = '10'
 PROFILE_FACTORY_FAUCET = '100'
 
-FORCE_MIGRATION = 'true'
+FORCE_MIGRATION = 'false'
 
 TLD="lsn"
 DOMAIN="sdk"
