Including profile fund holders logic

--- a/package.json
+++ b/package.json
@@ -71,6 +71,6 @@
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
     "openzeppelin-test-helpers": "0.3.2",
-    "truffle": "5.0.35"
+    "truffle": "^5.1.11"
   }
 }
