Using DEBUG for ls-sdk debug logging

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightstreams-js-sdk",
-  "version": "0.16.3",
+  "version": "0.17.0",
   "description": "Lightstreams JS SDK for building mainstream DApps with support for Programmable Decentralized Private Storage.",
   "author": "Gabriel Garrido",
   "contributors": [
@@ -49,6 +49,7 @@
     "@openzeppelin/network": "0.2.9",
     "@openzeppelin/upgrades": "2.5.3",
     "cids": "^0.7.1",
+    "debug": "^4.1.1",
     "entropy-string": "^4.2.0",
     "eth-ens-namehash": "^2.0.8",
     "ethereum-ens": "^0.7.7",
