add default password for standalone

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 DEBUG='ls-sdk:*'
 
 ACCOUNT="0xc916cfe5c83dd4fc3c3b0bf2ec2d4e401782875e"
-PASSPHRASE=""
+PASSPHRASE="WelcomeToSirius"
 RELAY_HUB=""
 RELAY_URL="http://localhost:8090"
 
